<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_15sdp"
    tools:context="com.example.nikita.authentication.activity.activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_40sdp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/netcarrier_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
                android:layout_marginTop="@dimen/_25sdp"
        android:weightSum="2">

        <EditText
            android:id="@+id/activity_login_edemail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:gravity="center|left"
            android:drawableLeft="@mipmap/ic_launcher"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/username"
            android:textSize="@dimen/_12sdp"
            android:inputType="textEmailAddress" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/loginbutton" />

        <EditText
            android:id="@+id/activity_login_edpassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:drawableLeft="@mipmap/ic_launcher"
            android:gravity="center|left"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/password"
            android:textSize="@dimen/_12sdp"
            android:inputType="textPassword" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/loginbutton" />

        <TextView
            android:id="@+id/activity_login_txtlogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/loginbuttonbg"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|right"
                        android:text="@string/forgotpwd"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/activity_login_txtforgot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|left"
                        android:paddingLeft="@dimen/_5sdp"
                        android:text="@string/retrivehere"
                        android:textColor="@color/loginbutton"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/loginbuttonqrbg"
                    android:orientation="horizontal"
                    android:weightSum="0.5">

                    <TextView
                        android:id="@+id/activity_login_txtsubmit"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:gravity="center|right"
                        android:text="@string/loginwithqrcode"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_15sdp" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:foregroundGravity="fill_horizontal"
                        android:gravity="center|left"
                        android:padding="@dimen/_8sdp"
                        android:src="@drawable/ic_qrcode" />
                </LinearLayout>

                <ProgressBar
            android:id="@+id/activity_login_progressbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
            </LinearLayout>
    </LinearLayout>
    </ScrollView>

</LinearLayout>
